--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
